--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
 </i></button>
 <a id=navTitle class=navbar-brand href=https://ngtrio.com/>星河鹭起
 </a><button type=button class=nav-darkmode-toggle id=darkModeToggleButton2>
-<i class=material-icons id=darkModeToggleIcon2>dark_mode</i></button></div></nav><div class=single-column-header-container id=pageHead v-bind:style="{ transform: 'translateZ(0px) translateY('+.3*scrollY+'px)', opacity: 1-navOpacity }"><a href=https://ngtrio.com/><div class=single-column-header-title>星河鹭起</div></a></div><div id=content><div id=streamContainer class=stream-container><div class="post-list-container post-list-container-no-background"><a href=/posts/%E6%AD%A3%E7%A1%AE%E7%9A%84%E7%90%86%E8%B4%A2/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>真的是在理财吗</div><div class=post-item-summary>写在24年9月底的A股暴涨</div><div class=post-item-meta>2024-10-04
-&emsp;
-<i class=material-icons style=font-size:10px>schedule</i>
-2 min
-22 s
-&emsp;</div></div></div></div><a href=/posts/go-genric/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>Go Generics</div><div class=post-item-summary>go语言泛型</div><div class=post-item-meta>2022-04-17
+<i class=material-icons id=darkModeToggleIcon2>dark_mode</i></button></div></nav><div class=single-column-header-container id=pageHead v-bind:style="{ transform: 'translateZ(0px) translateY('+.3*scrollY+'px)', opacity: 1-navOpacity }"><a href=https://ngtrio.com/><div class=single-column-header-title>星河鹭起</div></a></div><div id=content><div id=streamContainer class=stream-container><div class="post-list-container post-list-container-no-background"><a href=/posts/go-genric/ class=a-block><div class=post-item-wrapper><div class="post-item post-item-no-divider"><div class=post-item-info-wrapper><div class=post-item-title>Go Generics</div><div class=post-item-summary>go语言泛型</div><div class=post-item-meta>2022-04-17
 &emsp;
 <i class=material-icons style=font-size:10px>schedule</i>
 9 min
